<resources>
	<string name="app_name">count13</string>
	<string name="description_add_a_new_counter">Add a new counter.</string>
	<string name="settings">Settings</string>
	<string name="sign_up">Sign Up</string>
	<string name="home">Home</string>
	<string name="start_count">Start Count</string>
	<string name="add">Add</string>
	<string name="description">Description</string>
	<string name="title">Title</string>
	<string name="add_a_new_note">Add A New Note</string>
	<string name="title_missing">Title missing.</string>
</resources>