<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	
	<data>
		
		<variable
			name="viewModel"
			type="me.renespies.count13.fragment.addcounternote.AddCounterNoteDialogViewModel"
			/>
		
		<import type="me.renespies.count13.Util.AddNoteFormErrorType"/>
	</data>
	
	<androidx.core.widget.NestedScrollView
		android:id="@+id/nested_scroll_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraint_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			>
			
			<TextView
				android:id="@+id/title_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_a_new_note"
				android:textAppearance="@android:style/TextAppearance.Material.Title"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toTopOf="@id/guideline_top"
				/>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/add_note_title_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/guideline_margin_small"
				android:hint="@string/title"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/title_text_view"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/add_note_title_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="100"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:text="@={viewModel.noteTitle}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/add_note_description_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/guideline_margin_small"
				android:hint="@string/description"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/add_note_title_layout"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/add_note_description_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="101"
					android:imeOptions="actionNext"
					android:inputType="textCapSentences|textMultiLine"
					android:lines="3"
					android:text="@={viewModel.noteDescription}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/add_note_start_count_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/guideline_margin_small"
				android:hint="@string/start_count"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/add_note_description_layout"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/add_note_start_count_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="102"
					android:imeOptions="actionDone"
					android:inputType="number|numberSigned"
					android:text="@={viewModel.noteStartCount}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/add_button"
				style="@style/Widget.MaterialComponents.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/guideline_margin_small"
				android:onClick="@{(view) -> viewModel.addNote(view)}"
				android:text="@string/add"
				app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@+id/add_note_start_count_layout"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_top"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_begin="@dimen/guideline_margin_small"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_end"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="vertical"
				app:layout_constraintGuide_end="@dimen/guideline_margin_small"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_bottom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_end="@dimen/guideline_margin_small"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_start"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="vertical"
				app:layout_constraintGuide_begin="@dimen/guideline_margin_small"
				/>
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>
</layout>